# ChangeLog for x11-libs/libview
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*libview-0.6.6 (09 Aug 2010)

  09 Aug 2010; Vadim Kuznetsov <vadimk@gentoo.org> -libview-0.6.5.ebuild,
  +libview-0.6.6.ebuild:
  version bump

*libview-0.6.5 (01 Jun 2010)

  01 Jun 2010; Vadim Kuznetsov <vadimk@gentoo.org>
  +files/libview-0.5.6-pcfix.patch, +libview-0.6.5.ebuild, +metadata.xml:
  version bump
