@@ -1,5 +1,5 @@
 AUX libview-0.5.6-pcfix.patch 600 RMD160 58869acfda194c671bc6c858d0f8cfd7bc62851b SHA1 393d7d2e440173cd0cb2edc7de10629dab1f1c6e SHA256 4d93c8067fb1d371780a665fff731dd27ce3daac983ea63efbb7ba2bad492d39
 DIST libview-0.6.6.tar.bz2 304958 RMD160 1b118bd133dd97f19210389c3b1dbe80bad68cc9 SHA1 6ec44d55ceaf1a80196f1ee300deca75a4c9c793 SHA256 2b991bf150c5488b43f807e89bdbd64b2eb3bd433abbdfb68c3eec52cbaa59ab
-EBUILD libview-0.6.6.ebuild 725 RMD160 d443135e403fd08a574bce696530d68dd0b7fc21 SHA1 6b0a8c620da9519b97523c5ee70e205f05ec76fc SHA256 0ebaa38210f670f1832718880d86821deac3baafb69a542617a9c53be7bcee88
-MISC ChangeLog 433 RMD160 ad5ffbcdf5ec0deb05ee5b74dfd1b97d81619812 SHA1 983fcb101d3292e47dd27aec3f917ae788656807 SHA256 6b3b1e9388561bcf4fd3b09bc04d15d5c9321203263c3fb52eb7a3541bc47c01
+EBUILD libview-0.6.6.ebuild 727 RMD160 4ab7d59479b9dbab92ba895a2725e4b5fbd0cd10 SHA1 04e28ac35f1ad13057f18225c9d865b43caa64f3 SHA256 b02eaafb47598060bb8b54ca4da160fb4dd2536b3c765df14974a8c529873ad6
+MISC ChangeLog 552 RMD160 e8add5d25240dd756d40f25d131c96743acfca69 SHA1 e238201143d43429f9b4c093fc8c6b8b9d8b550d SHA256 72bf8c110ec7f4bd1ef0f77e5af9c82ec893dd906580fe52932c1a70341528da
 MISC metadata.xml 210 RMD160 c221abe824d7def33ad4b46921558f39f5c86c9c SHA1 c5d824f3b06a9b92a197c9dd811eafdf9f5e7487 SHA256 046ab532b99c45cb8b7c910ce6058555fb8d02a88aa9ffa4fa5a6bda923f1e11
