@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libview/libview-0.6.2.ebuild,v 1.3 2009/01/12 21:41:05 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libview/libview-0.6.6.ebuild,v 1.2 2011/03/29 07:20:54 nirbheek Exp $
 
 EAPI=3
 
@@ -15,8 +15,8 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 
-RDEPEND=">=x11-libs/gtk+-2.4.0
-		 >=dev-cpp/gtkmm-2.4"
+RDEPEND=">=x11-libs/gtk+-2.4.0:2
+		 dev-cpp/gtkmm:2.4"
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig"
 
