@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libview
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  29 Apr 2011; Vadim Kuznetsov <vadimk@gentoo.org> libview-0.6.6.ebuild:
+  copied from portage to fix gnome slot deps
 
 *libview-0.6.6 (09 Aug 2010)
 
